<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/nav_auth"
    app:startDestination="@id/splashFragment">

    <fragment
        android:id="@+id/splashFragment"
        android:name="app.te.architecture.presentation.splash.SplashFragment"
        android:label="SplashFragment"
        tools:layout="@layout/fragment_splash">

        <action
            android:id="@+id/action_splashFragment_to_tutorialFragment"
            app:destination="@id/tutorialFragment"
            app:enterAnim="@anim/anim_slide_in_right"
            app:exitAnim="@anim/anim_slide_out_left"
            app:popEnterAnim="@anim/anim_slide_in_left"
            app:popExitAnim="@anim/anim_slide_out_right"
            app:popUpTo="@id/splashFragment"
            app:popUpToInclusive="true" />
        <action
            android:id="@+id/action_splashFragment_to_logInFragment"
            app:destination="@id/logInFragment"
            app:enterAnim="@anim/anim_slide_in_right"
            app:exitAnim="@anim/anim_slide_out_left"
            app:popEnterAnim="@anim/anim_slide_in_left"
            app:popExitAnim="@anim/anim_slide_out_right"
            app:popUpTo="@id/splashFragment"
            app:popUpToInclusive="true" />


    </fragment>
    <fragment
        android:id="@+id/tutorialFragment"
        android:name="app.te.architecture.presentation.intro.tutorial.TutorialFragment"
        android:label="TutorialFragment"
        tools:layout="@layout/fragment_tutorial" />


    <fragment
        android:id="@+id/logInFragment"
        android:name="app.te.architecture.presentation.auth.log_in.LogInFragment"
        android:label=""
        tools:layout="@layout/fragment_log_in">
        <action
            android:id="@+id/action_logInFragment_to_signUpFragment"
            app:destination="@id/signUpFragment"
            app:enterAnim="@anim/anim_slide_in_right"
            app:exitAnim="@anim/anim_slide_out_left"
            app:popEnterAnim="@anim/anim_slide_in_left"
            app:popExitAnim="@anim/anim_slide_out_right" />
        <action
            android:id="@+id/action_logInFragment_to_forgotPasswordFragment"
            app:destination="@id/forgotPasswordFragment"
            app:enterAnim="@anim/anim_slide_in_right"
            app:exitAnim="@anim/anim_slide_out_left"
            app:popEnterAnim="@anim/anim_slide_in_left"
            app:popExitAnim="@anim/anim_slide_out_right" />
    </fragment>

    <fragment
        android:id="@+id/signUpFragment"
        android:name="app.te.architecture.presentation.auth.sign_up.SignUpFragment"
        android:label="@string/create_account"
        tools:layout="@layout/fragment_sign_up">
        <action
            android:id="@+id/action_signUpFragment_to_confirmCodeFragment"
            app:destination="@id/confirmCodeFragment"
            app:enterAnim="@anim/anim_slide_in_right"
            app:exitAnim="@anim/anim_slide_out_left"
            app:popEnterAnim="@anim/anim_slide_in_left"
            app:popExitAnim="@anim/anim_slide_out_right" />
    </fragment>

    <fragment
        android:id="@+id/confirmCodeFragment"
        android:name="app.te.architecture.presentation.auth.confirmCode.ConfirmCodeFragment"
        android:label="@string/confirm"
        tools:layout="@layout/fragment_confirm_code">
        <argument
            android:name="user_request"
            app:argType="app.te.architecture.domain.auth.entity.request.RegisterRequest" />

        <argument
            android:name="forget_request"
            app:argType="app.te.architecture.domain.auth.entity.request.ForgetPasswordRequest" />
        <argument
            android:name="confirm_message"
            app:argType="string" />

        <action
            android:id="@+id/action_confirmCodeFragment_to_changePasswordFragment2"
            app:destination="@id/changePasswordFragment2"
            app:enterAnim="@anim/anim_slide_in_right"
            app:exitAnim="@anim/anim_slide_out_left"
            app:popEnterAnim="@anim/anim_slide_in_left"
            app:popExitAnim="@anim/anim_slide_out_right"
            app:popUpTo="@id/logInFragment" />

    </fragment>
    <fragment
        android:id="@+id/forgotPasswordFragment"
        android:name="app.te.architecture.presentation.auth.forgot_password.ForgotPasswordFragment"
        android:label="@string/forget_password_title"
        tools:layout="@layout/fragment_forgot_password">
        <action
            android:id="@+id/action_forgotPasswordFragment_to_confirmCodeFragment"
            app:destination="@id/confirmCodeFragment"
            app:enterAnim="@anim/anim_slide_in_right"
            app:exitAnim="@anim/anim_slide_out_left"
            app:popEnterAnim="@anim/anim_slide_in_left"
            app:popExitAnim="@anim/anim_slide_out_right" />
    </fragment>
    <fragment
        android:id="@+id/changePasswordFragment2"
        android:name="app.te.architecture.presentation.auth.forgot_password.change_password.AuthChangePasswordFragment"
        tools:layout="@layout/fragment_change_password"
        android:label="@string/change_password">
        <argument
            android:name="phone"
            app:argType="string" />
    </fragment>

</navigation>