<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

        <import type="app.te.architecture.presentation.base.utils.Constants" />

        <variable
            name="eventListener"
            type="app.te.architecture.presentation.auth.sign_up.RegisterEventListener" />


        <variable
            name="uiState"
            type="app.te.architecture.presentation.auth.sign_up.RegisterUiState" />

    </data>

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">


            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/input_name"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/_10sdp"
                android:layout_marginTop="@dimen/_35sdp"
                android:layout_marginEnd="@dimen/_10sdp"
                android:hint="@string/first_name"
                android:textColorHint="@color/colorGray"
                app:error="@{uiState.request.validation.nameError}"
                app:errorEnabled="@{uiState.request.validation.nameError==null?false:true}"
                app:helperTextTextColor="@color/black"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:startIconDrawable="@drawable/ic_user"
                app:startIconTint="@color/colorGray">

                <androidx.appcompat.widget.AppCompatEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="text"
                    android:text="@={uiState.request.name}"
                    android:textAppearance="@style/TextAppearance.AppCompat.Small"
                    android:textColor="@color/black"
                    android:textColorHint="@color/colorGray" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/input_city"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/_10sdp"
                android:layout_marginTop="@dimen/_8sdp"
                android:layout_marginEnd="@dimen/_10sdp"
                android:hint="@string/last_name"
                android:textAlignment="viewEnd"
                android:textColorHint="@color/colorGray"
                app:error="@{uiState.request.validation.cityError}"
                app:errorEnabled="@{uiState.request.validation.cityError==null?false:true}"
                app:helperTextTextColor="@color/black"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/input_name"
                app:startIconDrawable="@drawable/ic_user"
                app:startIconTint="@color/colorGray">

                <androidx.appcompat.widget.AppCompatEditText
                    android:id="@+id/city"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="text"
                    android:text="@={uiState.cityName}"
                    android:textAppearance="@style/TextAppearance.AppCompat.Small"
                    android:textColor="@color/black"
                    android:textColorHint="@color/colorGray" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/input_phone"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/_10sdp"
                android:layout_marginTop="@dimen/_8sdp"
                android:layout_marginEnd="@dimen/_10sdp"
                android:hint="@string/phone_hint"
                android:textColorHint="@color/colorGray"
                app:error="@{uiState.request.validation.phoneError}"
                app:errorEnabled="@{uiState.request.validation.phoneError==null?false:true}"
                app:helperTextTextColor="@color/black"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/input_city"
                app:startIconDrawable="@drawable/ic_phone"
                app:startIconTint="@color/colorGray">

                <androidx.appcompat.widget.AppCompatEditText
                    android:id="@+id/ed_phone"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:digits="0123456789"
                    android:inputType="phone"
                    android:onTextChanged="@{uiState.onPhoneChange}"
                    android:text="@={uiState.request.phone}"
                    android:textAppearance="@style/TextAppearance.AppCompat.Small"
                    android:textColor="@color/black"
                    android:textColorHint="@color/colorGray" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/input_new_password"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/_10sdp"
                android:layout_marginTop="@dimen/_8sdp"
                android:layout_marginEnd="@dimen/_10sdp"
                android:hint="@string/password"
                android:textColorHint="@color/colorGray"
                app:error="@{uiState.request.validation.passwordError}"
                app:errorEnabled="@{uiState.request.validation.passwordError==null?false:true}"
                app:helperTextTextColor="@color/black"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/input_phone"
                app:passwordToggleEnabled="true"
                app:startIconDrawable="@drawable/ic_password"
                app:startIconTint="@color/colorGray">

                <androidx.appcompat.widget.AppCompatEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textPassword"
                    android:text="@={uiState.request.password}"
                    android:textAppearance="@style/TextAppearance.AppCompat.Small"
                    android:textColor="@color/black"
                    android:textColorHint="@color/colorGray" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.button.MaterialButton
                android:id="@+id/appCompatButtonNext"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_16sdp"
                android:onClick="@{()-> eventListener.signUp()}"
                android:padding="@dimen/_8sdp"
                android:text="@string/sign_up"
                android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                android:textColor="@color/white"
                app:backgroundTint="@color/colorPrimaryDark"
                app:layout_constraintEnd_toEndOf="@id/input_name"
                app:layout_constraintStart_toStartOf="@id/input_name"
                app:layout_constraintTop_toBottomOf="@id/input_new_password" />
            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/create_an_account"
                style="@style/TextMediumFont"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="?selectableItemBackground"
                android:onClick="@{()-> eventListener.back()}"
                android:text="@string/already_have_account"
                android:textAppearance="@style/TextAppearance.AppCompat.Small"
                android:textColor="@color/dark_grey" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/sign_up"
                style="@style/TextMediumFont"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="?selectableItemBackground"
                android:onClick="@{()-> eventListener.back()}"
                android:text="@string/login"
                android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                android:textColor="@color/black" />

            <androidx.constraintlayout.helper.widget.Flow
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_10sdp"
                android:layout_marginBottom="@dimen/_10sdp"
                app:constraint_referenced_ids="create_an_account,sign_up"
                app:flow_horizontalStyle="packed"
                app:flow_horizontalGap="@dimen/_6sdp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/appCompatButtonNext" />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.core.widget.NestedScrollView>
</layout>